# backdoor-python

./: build.py  cleanup.py  pyproject.toml
src/backdoor/: client.py  server.py
src/backdoor/command/: converter.py  executor.py  processor.py
src/backdoor/exceptions/: core.py
src/backdoor/files/: exceptions.py  io.py  processor.py
src/backdoor/messages/: exceptions.py  messenger.py  protocol.py
src/backdoor/messages/exchange/: client.py  server.py
src/backdoor/models/: client.py  commands.py  mixins.py  server.py  systemreport.py
src/backdoor/report/: systemreport.py
src/backdoor/serialization/: exceptions.py  jsonserializer.py  serializer.py
src/backdoor/serialization/decoders/: aggregator.py  commands.py  decoder.py  exceptions.py  systmereport.py
src/backdoor/serialization/encoders/: aggregator.py  commands.py  encoder.py  exceptions.py  systemreport.py
src/backdoor/utils/: errors.py
tests/backdoor-python/: client_tests.py
tests/backdoor-tests/: jsonserializer_tests.py  socketmessenger_tests.py  socketprotocol_tests.py
typings/: cpuinfo.pyi
