[project]
name = "backdoor-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Ramon Saviato",email = "ramonsaviato@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.12.3,<3.0.0)",
    "py-cpuinfo (>=9.0.0,<10.0.0)",
    "psutil (>=7.1.2,<8.0.0)"
]


[tool.poetry]
packages = [
    {include = "backdoor", from = "src"}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "pdm (>=2.26.0,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "types-psutil (>=7.0.0.20251001,<8.0.0.0)"
]

[tool.mypy]
mypy_path = "typings/"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests/**/*_tests.py",
]

[tool.pdm.scripts]
prettify = "black src tests"
lint = "mypy src"
test = "pytest"
